--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -14,6 +14,13 @@
   color: white;
 }
 
+.App-body {
+  display: flex;
+  padding: 15px 10px;
+  width: 900px;
+  margin: 0 auto;
+}
+
 .App-intro {
   font-size: large;
 }
