--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,28 +1,41 @@
 .App {
   text-align: center;
-}
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
+  &-logo {
+    position: absolute;
+    right: 0;
+    top: 0;
+    animation: App-logo-spin infinite 20s linear;
+    height: 80px;
+    pointer-events: none;
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
+    &-text {
+      text-align: right;
+      padding-right: 90px;
+      line-height: 40px;
+      margin: 0;
+    }
+  }
 
-.App-body {
-  display: flex;
-  padding: 15px 10px;
-  width: 900px;
-  margin: 0 auto;
-}
+  &-header {
+    background-color: #222;
+    height: 80px;
+    padding: 20px;
+    color: #fff;
+    overflow: hidden;
+    position: relative;
+  }
 
-.App-intro {
-  font-size: large;
+  &-body {
+    display: flex;
+    padding: 15px 10px;
+    max-width: 900px;
+    margin: 0 auto;
+  }
+
+  &-intro {
+    font-size: large;
+  }
 }
 
 @keyframes App-logo-spin {
