--- a/src/App/components/Categories/CategoryForm.scss
+++ b/src/App/components/Categories/CategoryForm.scss
@@ -8,4 +8,9 @@
   height: 35px;
   font-size: 16px;
   padding: 0 5px;
+
+  &:focus {
+    outline: none;
+    box-shadow: rgba(33, 150, 243, 0.5) 0px 3px 16px, rgba(33, 150, 243, 0.5) 0px 1px 4px;
+  }
 }
