Added basis for todos-filter

--- a/src/App/components/Checkbox/Checkbox.scss
+++ b/src/App/components/Checkbox/Checkbox.scss
@@ -5,6 +5,8 @@
   height: 1em;
   cursor: pointer;
   user-select: none;
+  margin: 0;
+  vertical-align: text-top;
 
   &:before {
     display: inline-block;
