--- a/src/App/components/Categories/CategoryForm.scss
+++ b/src/App/components/Categories/CategoryForm.scss
@@ -8,6 +8,8 @@
   height: 35px;
   font-size: 16px;
   padding: 0 5px;
+  transition: box-shadow 0.15s linear;
+  will-change: box-shadow;
 
   &:focus {
     outline: none;
