--- a/src/index.scss
+++ b/src/index.scss
@@ -24,3 +24,15 @@ body {
 .cp {
   cursor: pointer;
 }
+
+.layout {
+  &-left-pane {
+    width: 300px;
+    margin: 15px auto;
+  }
+
+  &-right-pane {
+    width: 350px;
+    margin: 15px auto;
+  }
+}
