--- a/src/index.scss
+++ b/src/index.scss
@@ -15,6 +15,11 @@ $icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
   box-sizing: border-box;
 }
 
+html, body, .wh100 {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -23,6 +28,10 @@ body {
 
 .cp {
   cursor: pointer;
+}
+
+.root-container {
+  overflow: hidden;
 }
 
 .layout {
@@ -34,5 +43,6 @@ body {
   &-right-pane {
     width: 350px;
     margin: 15px auto;
+    overflow: auto;
   }
 }
