--- a/src/App/pages/TodoEditPage/TodoEditPage.scss
+++ b/src/App/pages/TodoEditPage/TodoEditPage.scss
@@ -8,4 +8,19 @@
       margin: 10px;
     }
   }
+
+  .todo-title-field {//todo use mixin
+    box-shadow: rgba(0, 0, 0, 0.117647) 0px 3px 16px, rgba(0, 0, 0, 0.117647) 0px 1px 4px;
+    border: none;
+    height: 35px;
+    font-size: 16px;
+    padding: 0 5px;
+    transition: box-shadow 0.15s linear;
+    will-change: box-shadow;
+
+    &:focus {
+      outline: none;
+      box-shadow: rgba(33, 150, 243, 0.5) 0px 3px 16px, rgba(33, 150, 243, 0.5) 0px 1px 4px;
+    }
+  }
 }
