--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -28,8 +28,8 @@
 
   &-body {
     display: flex;
+    flex-direction: row;
     padding: 15px 10px;
-    max-width: 900px;
     margin: 0 auto;
     height: calc(100% - 80px);
   }
