--- a/src/App/components/Categories/CategoryForm.scss
+++ b/src/App/components/Categories/CategoryForm.scss
@@ -1,20 +1,15 @@
+@import "../../styles/mixins";
+
 .category-form {
   margin-bottom: 15px;
   display: flex;
 }
 
 .category-name-field {
-  box-shadow: rgba(0, 0, 0, 0.117647) 0px 3px 16px, rgba(0, 0, 0, 0.117647) 0px 1px 4px;
   border: none;
   width: 100%;
   height: 35px;
   font-size: 16px;
   padding: 0 5px;
-  transition: box-shadow 0.15s linear;
-  will-change: box-shadow;
-
-  &:focus {
-    outline: none;
-    box-shadow: rgba(33, 150, 243, 0.5) 0px 3px 16px, rgba(33, 150, 243, 0.5) 0px 1px 4px;
-  }
+  @include input-shadow();
 }
