--- a/src/App/components/Categories/CategoryContainer.scss
+++ b/src/App/components/Categories/CategoryContainer.scss
@@ -1,2 +1,36 @@
 .category-container {
 }
+
+.confirm-modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  right: auto;
+  bottom: auto;
+  transform: translate(-50%, -50%);
+  transform-origin: center center;
+  background-color: #ffffff;
+  box-shadow: rgba(0, 0, 0, 0.117647) 0px 3px 16px, rgba(0, 0, 0, 0.117647) 0px 1px 4px;
+  padding: 10px 20px;
+  outline: none;
+  animation: zoom-modal-open 0.3s;
+
+  .modal-buttons-group {
+    display: flex;
+    float: right;
+
+    .btn-modal {
+      margin-left: 10px;
+    }
+  }
+}
+
+@keyframes zoom-modal-open {
+  from {
+    transform: translate(-50%, -50%) scale(0);
+  }
+
+  to {
+    transform: translate(-50%, -50%) scale(1);
+  }
+}
