--- a/src/App/components/Categories/Category.scss
+++ b/src/App/components/Categories/Category.scss
@@ -23,7 +23,7 @@
     display: flex;
     align-self: center;
     cursor: pointer;
-    width: 20px;
+    width: 25px;
     height: 10px;
     transition: transform 0.15s ease-in;
     transform: rotate(-90deg);
@@ -33,7 +33,20 @@
     }
   }
 
+  .category-name-cnt {
+    display: inline-flex;
+    flex-grow: 1;
+    width: 100%;
+
+
+  }
+
   .category-name {
+    flex-grow: 0.9;
+    width: 0;//necessary for correct working of flex-grow
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     color: #00bcd4;
     cursor: pointer;
     margin: 0 10px;
