Changed scroll containers and added ellipsis() mixin

--- a/src/App/pages/TodoListPage/TodoListPage.scss
+++ b/src/App/pages/TodoListPage/TodoListPage.scss
@@ -1,5 +1,8 @@
 .todo-list-page {
-  margin: 15px;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  margin: 15px 15px 0;
 
   .half-width {
     width: 50%;
