--- a/src/App/components/Categories/Category.scss
+++ b/src/App/components/Categories/Category.scss
@@ -1,3 +1,5 @@
+@import "../../styles/mixins";
+
 .category-card {
 
   &-header {
@@ -37,19 +39,15 @@
     display: inline-flex;
     flex-grow: 1;
     width: 100%;
-
-
   }
 
   .category-name {
     flex-grow: 0.9;
     width: 0;//necessary for correct working of flex-grow
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
     color: #00bcd4;
     cursor: pointer;
     margin: 0 10px;
+    @include ellipsis();
 
     &:hover {
       text-decoration: underline;
