--- a/src/App/components/Categories/CategoryForm.scss
+++ b/src/App/components/Categories/CategoryForm.scss
@@ -1,8 +1,9 @@
 @import "../../styles/mixins";
 
 .category-form {
-  margin-bottom: 15px;
   display: flex;
+  margin-bottom: 15px;
+  min-height: 36px;
 }
 
 .category-name-field {
