--- a/src/App/styles/mixins.scss
+++ b/src/App/styles/mixins.scss
@@ -8,3 +8,9 @@
     box-shadow: rgba(33, 150, 243, 0.5) 0px 3px 16px, rgba(33, 150, 243, 0.5) 0px 1px 4px;
   }
 }
+
+@mixin ellipsis() {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
