--- a/src/index.scss
+++ b/src/index.scss
@@ -40,15 +40,15 @@ body {
 
 .layout {
   &-left-pane {
+    display: flex;
+    flex-direction: column;
     width: 300px;
-    overflow: auto;
-    padding: 15px;
+    margin-right: 15px;
   }
 
   &-right-pane {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    overflow: auto;
   }
 }
