--- a/src/App/pages/TodoListPage/TodoListPage.scss
+++ b/src/App/pages/TodoListPage/TodoListPage.scss
@@ -2,7 +2,13 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  margin: 15px 15px 0;
+  margin: 0 15px;
+
+  &-modifier {
+    .layout-body {
+      height: calc(100% - 50px);
+    }
+  }
 
   .half-width {
     width: 50%;
