Connected todos with categories

--- a/src/App/components/Categories/Category.scss
+++ b/src/App/components/Categories/Category.scss
@@ -85,5 +85,10 @@
   .hidden {
     visibility: hidden;
   }
+
+  .category-selected {
+    font-weight: bold;
+    text-decoration: underline;
+  }
 }
 
