Changed markup and styles for TodoForm and other minor markup changes (temporary removed undo-redo component)

--- a/src/App/pages/TodoListPage/Todo.scss
+++ b/src/App/pages/TodoListPage/Todo.scss
@@ -2,7 +2,7 @@
   $c-shadow: rgba(46, 46, 46, 0.35);
   $c-border: #e4e4e4;
 
-  margin-top: 15px;
+  margin-bottom: 15px;
   border: 1px solid $c-border;
   box-shadow: $c-shadow 0 0 0;
   transition: box-shadow 0.25s ease-in;
