--- a/src/App/pages/TodoListPage/Todo.scss
+++ b/src/App/pages/TodoListPage/Todo.scss
@@ -2,6 +2,9 @@
   $c-shadow: rgba(46, 46, 46, 0.35);
   $c-border: #e4e4e4;
 
+  display: flex;
+  flex-direction: column;
+  min-height: 100px;
   margin-bottom: 15px;
   border: 1px solid $c-border;
   box-shadow: $c-shadow 0 0 0;
@@ -24,6 +27,19 @@
     height: 1em;
     line-height: 1em;
     cursor: pointer;
+  }
+
+  .todo-title {
+    display: flex;
+    flex-grow: 1;
+    align-self: center;
+    padding: 15px 45px;
+    margin: 0;
+
+    &-link {
+      align-self: center;
+      word-break: break-all;
+    }
   }
 
   .chbx-cnt {
