--- a/src/App/components/TodoFilter/TodoFilter.scss
+++ b/src/App/components/TodoFilter/TodoFilter.scss
@@ -16,7 +16,7 @@
     .search-input {
       border: none;
       font-size: 16px;
-      padding: 0 5px;
+      padding: 0 30px 0 5px;
       @include input-shadow();
     }
 
