--- a/src/App/components/Categories/Category.scss
+++ b/src/App/components/Categories/Category.scss
@@ -1,10 +1,11 @@
-@import "../../styles/mixins";
+@import "../../styles/_mixins";
+@import "../../styles/_colors";
 
 .category-card {
 
   &-header {
     display: flex;
-    box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 6px, rgba(0, 0, 0, 0.117647) 0px 1px 4px;
+    box-shadow: $c-category-shadow 0px 1px 6px, $c-category-shadow 0px 1px 4px;
     border-radius: 2px;
     text-align: left;
     padding: 10px;
@@ -45,7 +46,7 @@
   .category-name {
     flex-grow: 0.9;
     width: 0;//necessary for correct working of flex-grow
-    color: #00bcd4;
+    color: $c-category-text;
     cursor: pointer;
     margin: 0 10px;
     @include ellipsis();
@@ -108,7 +109,7 @@
     padding-left: 5px;
 
     &:hover {
-      background-color: rgba(0, 0, 0, 0.12);
+      background-color: $c-category-bg;
     }
   }
 }
