--- a/src/App/components/Checkbox/Checkbox.scss
+++ b/src/App/components/Checkbox/Checkbox.scss
@@ -1,3 +1,5 @@
+@import "../../styles/_colors";
+
 .chbx-cnt {
   position: relative;
   display: inline-block;
@@ -13,7 +15,7 @@
     content: '';
     width: 100%;
     height: 100%;
-    border: 0.15em solid rgba(0, 0, 0, .5);
+    border: 0.15em solid $c-checkbox-border;
     border-radius: 2px;
     z-index: 1;
     position: relative;
@@ -24,8 +26,8 @@
   }
 
   .chbx-img:after {
-    border-right: 0.15em solid #ffa500;
-    border-bottom: 0.15em solid #ffa500;
+    border-right: 0.15em solid $c-checkbox-check-mark;
+    border-bottom: 0.15em solid $c-checkbox-check-mark;
     display: inline-block;
     content: '';
     width: 35%;
