--- a/src/App/components/TodoFilter/TodoFilter.scss
+++ b/src/App/components/TodoFilter/TodoFilter.scss
@@ -1,4 +1,5 @@
-@import "../../styles/mixins";
+@import "../../styles/_mixins";
+@import "../../styles/_colors";
 
 .todo-filter {
   text-align: right;
@@ -25,19 +26,19 @@
       top: 3px;
       right: 3px;
       bottom: 3px;
-      border: 2px solid rgba(0, 0, 0, 0.5);
+      border: 2px solid $c-reset-search-border;
       border-radius: 4px;
       font-size: 16px;
       font-weight: bold;
-      color: rgba(0,0,0,0.7);
+      color: $c-reset-search-text;
       line-height: 12px;
-      background-color: #ffffff;
+      background-color: $c-light-bg;
       outline: none;
       transition: box-shadow 0.15s linear;
       will-change: box-shadow;
 
       &:active {
-        box-shadow: inset 0px 0px 1px 1px rgba(0,0,0,0.3);
+        box-shadow: inset 0 0 1px 1px $c-reset-search-shadow;
       }
     }
   }
