--- a/src/index.scss
+++ b/src/index.scss
@@ -1,93 +1,4 @@
-@import "App/styles/mixins";
-$bootstrap-sass-asset-helper: true;
-$icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
-@import "~bootstrap-sass/assets/stylesheets/bootstrap";
-
-@font-face {
-  font-family: 'Glyphicons Halflings';
-  src: url('~bootstrap-sass/assets/fonts/bootstrap/glyphicons-halflings-regular.eot');
-  src: url('~bootstrap-sass/assets/fonts/bootstrap/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),
-  url('~bootstrap-sass/assets/fonts/bootstrap/glyphicons-halflings-regular.woff') format('woff'),
-  url('~bootstrap-sass/assets/fonts/bootstrap/glyphicons-halflings-regular.ttf') format('truetype'),
-  url('~bootstrap-sass/assets/fonts/bootstrap/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
-}
-
-* {
-  box-sizing: border-box;
-}
-
-html, body, .wh100 {
-  width: 100%;
-  height: 100%;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
-
-.cp {
-  cursor: pointer;
-}
-
-.w100 {
-  width: 100%;
-}
-
-.root-container {
-  overflow: hidden;
-}
-
-.layout {
-  &-header {
-    display: flex;
-    flex-direction: column;
-    padding: 0 15px;
-  }
-
-  &-subheading {
-    height: 50px;
-
-    .page-name {
-      max-width: 100%;
-      float: left;
-      @include ellipsis();
-    }
-
-    .todo-filter {
-      float: right;
-    }
-  }
-
-  &-body {
-    display: flex;
-    padding: 10px 15px;
-    height: calc(100% - 100px);
-  }
-
-  &-left-pane {
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-    min-width: 300px;
-    margin-right: 15px;
-  }
-
-  &-right-pane {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-  }
-}
-
-
-.progress-bar-cnt {
-  height: 50px;
-  display: flex;
-  padding-right: 15px;
-
-  .progress-bar {
-    align-self: center;
-  }
-}
+@import "App/styles/_mixins";
+@import "App/styles/_vendors";
+@import "App/styles/_atomic";
+@import "App/styles/_layout";
