refactored components folder structure

--- a/src/App/components/Common/TodoFilter/TodoFilter.scss
+++ b/src/App/components/Common/TodoFilter/TodoFilter.scss
@@ -1,5 +1,5 @@
-@import "../../styles/_mixins";
-@import "../../styles/_colors";
+@import "../../../styles/_mixins";
+@import "../../../styles/_colors";
 
 .todo-filter {
   text-align: right;
