--- a/src/App/styles/_mixins.scss
+++ b/src/App/styles/_mixins.scss
@@ -16,3 +16,11 @@
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+
+@mixin abs-pos ($top: 0, $right: 0, $bottom: 0, $left: 0) {
+  position: absolute;
+  top: $top;
+  right: $right;
+  bottom: $bottom;
+  left: $left;
+}
