--- a/src/App/styles/_layout.scss
+++ b/src/App/styles/_layout.scss
@@ -43,7 +43,7 @@ body {
   &-body {
     display: flex;
     padding: 10px 15px;
-    height: calc(100% - 100px);
+    height: calc(100% - 50px);
   }
 
   &-left-pane {
@@ -59,17 +59,14 @@ body {
     flex-direction: column;
     flex-grow: 1;
     overflow: hidden;
+    position: relative;
 
     > div {
       white-space: nowrap;
-      position: relative;
+      @include abs-pos();
 
       > div {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
+        @include abs-pos();
       }
     }
   }
