--- a/src/App/components/Containers/TodoFilter/TodoFilter.scss
+++ b/src/App/components/Containers/TodoFilter/TodoFilter.scss
@@ -1,5 +1,4 @@
-@import "../../../styles/_mixins";
-@import "../../../styles/_colors";
+@import "../../../styles/_references";
 
 .todo-filter {
   text-align: right;
@@ -42,6 +41,4 @@
       }
     }
   }
-
-
 }
