--- a/src/App/components/Containers/UndoRedo/UndoRedo.scss
+++ b/src/App/components/Containers/UndoRedo/UndoRedo.scss
@@ -1,10 +1,5 @@
 .undo-redo-cnt {
-  .undo-button {
+  .btn {
     margin-right: 10px;
-  }
-
-  .undo-icon {
-    display: inline-block;
-    transform: scaleX(-1);
   }
 }
