--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,4 +1,4 @@
-@import "./styles/_colors";
+@import "./styles/_references";
 
 .App {
   text-align: center;
@@ -50,6 +50,10 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
