--- a/src/App/components/Common/Checkbox/Checkbox.scss
+++ b/src/App/components/Common/Checkbox/Checkbox.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/_colors";
+@import "../../../styles/_references";
 
 .chbx-cnt {
   position: relative;
@@ -12,7 +12,7 @@
 
   &:before {
     display: inline-block;
-    content: '';
+    content: "";
     width: 100%;
     height: 100%;
     border: 0.15em solid $c-checkbox-border;
@@ -29,7 +29,7 @@
     border-right: 0.15em solid $c-checkbox-check-mark;
     border-bottom: 0.15em solid $c-checkbox-check-mark;
     display: inline-block;
-    content: '';
+    content: "";
     width: 35%;
     height: 70%;
     position: absolute;
