--- a/src/App/components/Containers/Categories/CategoryItem/CategoryItem.scss
+++ b/src/App/components/Containers/Categories/CategoryItem/CategoryItem.scss
@@ -1,8 +1,6 @@
-@import "../../../../styles/_mixins";
-@import "../../../../styles/_colors";
+@import "../../../../styles/_references";
 
 .category-card {
-
   &-header {
     display: flex;
     box-shadow: $c-category-shadow 0px 1px 6px, $c-category-shadow 0px 1px 4px;
@@ -45,7 +43,7 @@
 
   .category-name {
     flex-grow: 0.9;
-    width: 0;//necessary for correct working of flex-grow
+    width: 0; //necessary for correct working of flex-grow
     color: $c-category-text;
     cursor: pointer;
     margin: 0 10px;
@@ -88,7 +86,6 @@
     margin-right: 5px;
   }
 
-
   .hidden {
     visibility: hidden;
   }
@@ -113,4 +110,3 @@
     }
   }
 }
-
