--- a/src/App/styles/layout.scss
+++ b/src/App/styles/layout.scss
@@ -1,10 +1,11 @@
-@import "./_mixins";
+@import "_references";
 
 * {
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   width: 100%;
   height: 100%;
 }
