--- a/src/App/styles/references/_mixins.scss
+++ b/src/App/styles/references/_mixins.scss
@@ -7,7 +7,8 @@
 
   &:focus {
     outline: none;
-    box-shadow: $c-input-outline-shadow 0px 3px 16px, $c-input-outline-shadow 0px 1px 4px;
+    box-shadow: $c-input-outline-shadow 0px 3px 16px,
+      $c-input-outline-shadow 0px 1px 4px;
   }
 }
 
