Added and integrated modal factory with redux

--- a/src/common/styles/references/_colors.scss
+++ b/src/common/styles/references/_colors.scss
@@ -5,6 +5,11 @@ $c-blue: #00bcd4;
 $c-orange: #ffa500;
 $c-green: #04f344;
 $c-dark-blue: #0390a2;
+$c-lynch: #627593;
+$c-mine-shaft: #333333;
+$c-midnight-blue: #003366;
+$c-boulder: #7a7a7a;
+$c-desert-storm: #fcfcfb;
 
 $c-light-blue05: rgba(33, 150, 243, 0.5);
 $c-dark-gray035: rgba(46, 46, 46, 0.35);
