--- a/src/common/styles/components/buttons.scss
+++ b/src/common/styles/components/buttons.scss
@@ -5,6 +5,7 @@
   border-radius: 2px;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 3px 16px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
   transition: background-color 0.15s ease, box-shadow 0.15s ease;
+  height: 35px;
 
   &:focus,
   &:hover {
