--- a/src/index.scss
+++ b/src/index.scss
@@ -2,3 +2,4 @@
 @import "./common/styles/atomic";
 @import "./common/styles/layout";
 @import "./common/styles/components/buttons";
+@import "./common/styles/utils/responsive-utils";
