--- a/src/common/components/TodosFilter/TodosFilter.scss
+++ b/src/common/components/TodosFilter/TodosFilter.scss
@@ -1,22 +1,35 @@
 @import "../../styles/_references";
 
 .todo-filter {
-  text-align: right;
-  padding: 15px;
+  width: 100%;
+
+  @media (min-width: $tablet-width) {
+    width: 350px;
+    margin-top: 15px;
+    display: flex;
+    justify-content: space-between;
+    height: 24px;
+  }
 
   .show-done {
     cursor: pointer;
     margin-right: 25px;
+    margin-bottom: 15px;
+    display: inline-block;
+    line-height: 24px;
+    white-space: nowrap;
   }
 
   .search-input-cnt {
     display: inline-block;
     position: relative;
+    width: 100%;
 
     .search-input {
       border: none;
       font-size: 16px;
       padding: 0 30px 0 5px;
+      width: 100%;
       @include input-shadow();
     }
 
