--- a/src/common/shells/RootShell/RootShell.scss
+++ b/src/common/shells/RootShell/RootShell.scss
@@ -4,53 +4,42 @@
   width: 100%;
   height: 100%;
 
-  &--header {
-    background-color: $c-dark-bg;
-    height: 80px;
-    padding: 20px;
-    color: $c-app-header-text;
-    overflow: hidden;
-    position: relative;
-
-    .undo-redo-cnt {
-      position: absolute;
-      left: 20px;
-      top: 50%;
-      transform: translateY(-50%);
-    }
-  }
-
   &--body {
     display: flex;
     width: 100%;
     flex-direction: column;
     margin: 0 auto;
-    height: calc(100% - 80px);
+    height: calc(100% - 130px);
     flex-grow: 1;
-  }
+    padding: 0 10px;
 
-  .App-logo {
-    position: absolute;
-    right: 0;
-    top: 0;
-    animation: App-logo-spin infinite 20s linear;
-    height: 80px;
-    pointer-events: none;
-
-    &-text {
-      text-align: right;
-      padding-right: 90px;
-      line-height: 40px;
-      margin: 0;
+    .progress-bar {
+      width: 100%;
     }
   }
+}
 
-  @keyframes App-logo-spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
+.App-logo {
+  position: absolute;
+  right: 0;
+  top: 0;
+  animation: App-logo-spin infinite 20s linear;
+  height: 80px;
+  pointer-events: none;
+
+  &-text {
+    text-align: right;
+    padding-right: 90px;
+    line-height: 40px;
+    margin: 0;
+  }
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
   }
 }
