--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,1 @@
-@import "./common/styles/vendors";
-@import "./common/styles/atomic";
-@import "./common/styles/layout";
-@import "./common/styles/components/buttons";
-@import "./common/styles/utils/responsive-utils";
+@import "common/styles/base";
