--- a/src/common/shells/RootShell/RootShell.scss
+++ b/src/common/shells/RootShell/RootShell.scss
@@ -3,6 +3,8 @@
 .root-shell {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
 
   &--body {
     display: flex;
@@ -11,10 +13,11 @@
     margin: 0 auto;
     height: calc(100% - 130px);
     flex-grow: 1;
-    padding: 0 10px;
+    padding: 0 15px;
 
     .progress-bar {
       width: 100%;
+      margin: 10px 0;
     }
   }
 }
@@ -31,7 +34,91 @@
     text-align: right;
     padding-right: 90px;
     line-height: 40px;
-    margin: 0;
+    margin-left: auto;
+  }
+}
+
+.layout {
+  &-header {
+    display: flex;
+    flex-direction: column;
+    padding: 0 15px;
+  }
+
+  &-subheading {
+    display: flex;
+    flex-wrap: wrap;
+
+    @media (min-width: $tablet-width) {
+      flex-wrap: nowrap;
+    }
+
+    .page-name {
+      max-width: 100%;
+      @include ellipsis();
+
+      @media (min-width: $tablet-width) {
+        margin-bottom: 0;
+      }
+    }
+
+    .todo-filter {
+      margin-left: auto;
+    }
+  }
+
+  &-body {
+    display: flex;
+    flex-grow: 1;
+    overflow: hidden;
+
+    & > .react-swipeable-view-container { // !important necessary to override inline styles
+      @media (min-width: $tablet-width) {
+        transform: none !important;
+      }
+
+      & > div:first-child {
+        width: 100%;
+        flex-grow: 1;
+
+        @media (min-width: $tablet-width) {
+          width: auto !important;
+          flex-grow: 0 !important;
+        }
+      }
+
+      & > div:last-child {
+        width: 100%;
+
+        @media (min-width: $tablet-width) {
+          width: auto !important;
+        }
+      }
+    }
+  }
+
+  &-left-pane {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+
+    @media (min-width: $tablet-width) {
+      width: 300px;
+      min-width: 300px;
+      margin-right: 15px;
+    }
+  }
+
+  &-right-pane {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    overflow: hidden;
+    width: 100%;
+
+    @media (min-width: $tablet-width) {
+      width: auto;
+    }
   }
 }
 
