Improved UndoRedo component

--- a/src/common/styles/components/buttons.scss
+++ b/src/common/styles/components/buttons.scss
@@ -21,6 +21,11 @@
     &:hover {
       background-color: $c-gray;
     }
+
+    &:disabled {
+      background-color: $c-white;
+      opacity: 0.5;
+    }
   }
 
   &-primary {
